--- a/pg_hba.conf
+++ b/pg_hba.conf
@@ -82,8 +82,12 @@ local   all             all                                     md5
 host    all             all             127.0.0.1/32            md5
 # IPv6 local connections:
 host    all             all             ::1/128                 md5
-#LoadBalancer server access
-host    all             all             10.138.1.2/24           md5
+#LoadBalancer1 server access
+host    all             all             10.138.1.21/24           md5
+#PostGres server access
+host    all             all             10.138.1.22/24           md5
+#LoadBalancer2 server access
+host    all             all             10.138.2.22/24           md5
 # Allow replication connections from localhost, by a user with the
 # replication privilege.
 #local   replication     postgres                                md5
